# AiToHuman

./: docker-compose.yaml
backend/: Dockerfile  app.py  pyproject.toml
backend/dtos/: analyze.py  humanize.py  ocr.py
backend/entities/: analyze_result.py  humanize_result.py  ocr_result.py  text_chunk.py
backend/llm_agent/: llm_agent.py
backend/models/gigachat/: config.py  gigachat.py
backend/redis_client/: client.py
backend/response_models/: analyze.py  humanize.py  ocr.py
backend/restrictions/: text.py
backend/services/: analyze_service.py  humanize_service.py  ocr_service.py
backend/tests/: test_analyze.py  test_humanize.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/Api/: Analyze.ts  FileOCR.ts  Humanize.ts  MockConfig.ts  mockData.ts
frontend/src/components/: AnalyzeResult.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  HumanizerResult.tsx  PageLayout.tsx  TextProcessor.tsx
frontend/src/pages/: Home.tsx
frontend/src/router/: Router.tsx
frontend/src/types/: Types.ts
frontend/src/utils/: errorHandler.ts
