[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.2",
    "langchain>=0.3.27",
    "langchain-gigachat>=0.3.12",
    "langgraph>=0.4.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.37.0",
    requests>=2.31.0,
]
